# sol-vault

./: Anchor.toml  Cargo.toml  README.md  package.json
programs/vault/: Cargo.toml
programs/vault/src/: lib.rs
rust-service/: Cargo.toml
rust-service/src/: main.rs
tests/: deposit.test.ts  initialize.test.ts  interest.test.ts  utils.ts  withdraw.test.ts
vaultcoin/: package-lock.json  package.json
vaultcoin/src/: index.ts  initializeKeypair.ts
