[package]
name = "rust-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk="1.16.4"
solana-client="1.16.4"
spl-token="4.0.0"
solana-account-decoder="1.16.4"
solana-program="1.16.4"
tokio = {version = "1.14.1", features=["full"]}
vault = {path = "../programs/vault", features = ["no-entrypoint"] }
spl-associated-token-account = "2.0.0"
anchor-lang = "0.28.0"
shellexpand = "2.1.0"
